# SonarQubeDemo

./: .gitignore  Jenkinsfile  build.sh  sonar-project.properties
OpenCppCoverageDemo/: CMakeLists.txt
OpenCppCoverageDemo/GoogleTest/: CMakeLists.txt  GoogleTest.vcxproj
OpenCppCoverageDemo/GoogleTest/x64/Debug/: GoogleTest.idb
OpenCppCoverageDemo/GoogleTest/x64/Debug/GoogleTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GoogleTest.lastbuildstate  Lib-link.write.1.tlog  Lib.read.1.tlog  lib.command.1.tlog
OpenCppCoverageDemo/TestDemo/x64/Debug/: vc141.idb
OpenCppCoverageDemo/TestDemo/x64/Debug/TestDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCppCoverageDemo/TestSource/: CMakeLists.txt  TestSource.cmake  TestSource.cpp
OpenCppCoverageDemo/TestSource/x64/Debug/: vc141.idb
OpenCppCoverageDemo/TestSource/x64/Debug/TestSource.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestSource.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCppCoverageDemo/UnitTestConsole/: CMakeLists.txt  TestSource.cpp  UnitTestConsole.vcxproj  UnitTestConsole.vcxproj.filters
OpenCppCoverageDemo/UnitTestConsole/x64/Debug/: vc141.idb
OpenCppCoverageDemo/UnitTestConsole/x64/Debug/UnitTestConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTestConsole.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCppCoverageDemo/cmake/: build.sh
